cleanup of SqlMatchingStats