@@ -23,21 +23,21 @@ import org.jooq.impl.DSL;
 public class SqlIdColumns implements Qualifiable<SqlIdColumns> {
 
 	@Getter
-	private final Field<Object> primaryColumn;
+	private final Field<String> primaryColumn;
 
 	@Nullable
-	private final Field<Object> secondaryId;
+	private final Field<String> secondaryId;
 
 	@Nullable
 	private final SqlIdColumns predecessor;
 
-	public SqlIdColumns(Field<Object> primaryColumn, Field<Object> secondaryId) {
+	public SqlIdColumns(Field<String> primaryColumn, Field<String> secondaryId) {
 		this.primaryColumn = primaryColumn;
 		this.secondaryId = secondaryId;
 		this.predecessor = null;
 	}
 
-	public SqlIdColumns(Field<Object> primaryColumn) {
+	public SqlIdColumns(Field<String> primaryColumn) {
 		this.primaryColumn = primaryColumn;
 		this.secondaryId = null;
 		this.predecessor = null;
@@ -56,11 +56,11 @@ public class SqlIdColumns implements Qualifiable<SqlIdColumns> {
 
 	@Override
 	public SqlIdColumns qualify(String qualifier) {
-		Field<Object> primaryColumn = QualifyingUtil.qualify(this.primaryColumn, qualifier);
+		Field<String> primaryColumn = QualifyingUtil.qualify(this.primaryColumn, qualifier);
 		if (secondaryId == null) {
 			return new SqlIdColumns(primaryColumn, null, this);
 		}
-		Field<Object> secondaryId = QualifyingUtil.qualify(this.secondaryId, qualifier);
+		Field<String> secondaryId = QualifyingUtil.qualify(this.secondaryId, qualifier);
 		return new SqlIdColumns(primaryColumn, secondaryId, this);
 	}
 
@@ -90,7 +90,7 @@ public class SqlIdColumns implements Qualifiable<SqlIdColumns> {
 		return this;
 	}
 
-	public Optional<Field<Object>> getSecondaryId() {
+	public Optional<Field<String>> getSecondaryId() {
 		return Optional.ofNullable(this.secondaryId);
 	}
 
@@ -121,8 +121,8 @@ public class SqlIdColumns implements Qualifiable<SqlIdColumns> {
 
 	public SqlIdColumns coalesce(List<SqlIdColumns> selectsIds) {
 
-		List<Field<?>> primaryColumns = new ArrayList<>();
-		List<Field<?>> secondaryIds = new ArrayList<>();
+		List<Field<String>> primaryColumns = new ArrayList<>();
+		List<Field<String>> secondaryIds = new ArrayList<>();
 
 		// add this ids
 		primaryColumns.add(this.primaryColumn);
@@ -134,20 +134,23 @@ public class SqlIdColumns implements Qualifiable<SqlIdColumns> {
 			ids.getSecondaryId().ifPresent(secondaryIds::add);
 		});
 
-		Field<Object> coalescedPrimaryColumn = coalesceFields(primaryColumns).as(SharedAliases.PRIMARY_COLUMN.getAlias());
+		Field<String> coalescedPrimaryColumn = coalesceFields(primaryColumns, String.class).as(SharedAliases.PRIMARY_COLUMN.getAlias());
 		if (secondaryIds.isEmpty()) {
 			return new SqlIdColumns(coalescedPrimaryColumn);
 		}
-		Field<Object> coalescedSecondaryIds = coalesceFields(secondaryIds).as(SharedAliases.SECONDARY_ID.getAlias());
+		Field<String> coalescedSecondaryIds = coalesceFields(secondaryIds, String.class).as(SharedAliases.SECONDARY_ID.getAlias());
 		return new SqlIdColumns(coalescedPrimaryColumn, coalescedSecondaryIds);
 	}
 
 
-	protected static Field<Object> coalesceFields(List<Field<?>> fields) {
-		if (fields.size() == 1) {
-			return fields.get(0).coerce(Object.class);
+	protected static <T> Field<T> coalesceFields(List<? extends Field<?>> fields, Class<T> type) {
+		Field<T> out = fields.getFirst().coerce(type);
+
+		for (int index = 1; index < fields.size(); index++) {
+			out = DSL.coalesce(out, fields.get(index).coerce(type));
 		}
-		return DSL.coalesce(fields.get(0), fields.subList(1, fields.size()).toArray());
+
+		return out;
 	}
 
 }
